--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ padding-right: 20px;
  }
 
  .name{
-  font-size: 70px;
+  font-size: 60px;
 }
 
 .bi-patch-check , .bi-book-half , .bi-easel2  {
@@ -156,3 +156,43 @@ padding-right: 20px;
 }
 }
 
+
+.SW{
+  height:100vh;
+  width: 5px !important;
+  position: fixed;
+  top: 0;
+  left:  50px;
+  background-color: var(--TurquoiseColor);
+  width: 100%;
+  scale: 1 0;
+  animation: scrollEffect ;
+  -webkit-animation: scrollEffect ;
+  animation-timeline: scroll(y) ;
+}
+
+
+@keyframes scrollEffect {
+
+  to {
+      scale : 1 1 ;
+  }
+}
+
+.scrani{
+  opacity: 0;
+  animation: faidin ;
+  -webkit-animation: faidin ;
+  animation-timeline: view() ;
+  animation-range: cover     ;
+}
+
+@keyframes faidin {
+
+  from {
+    opacity: 0; scale: 1 ;
+  }
+  to {
+    opacity: 100%; scale: 1 ;
+  }
+}
